Fixing overflow on brands page

--- a/assets/theme/clixtv/src/ui/brand/brand.less
+++ b/assets/theme/clixtv/src/ui/brand/brand.less
@@ -1,6 +1,7 @@
 @item-spacing: 9px;
 
 .brand-page {
+    overflow-x: hidden;
     .banner-favorite-icon {
         font-size: 12px;
         position: relative;
